# tpu_tg_bot_contest_2023

./: .gitignore  README.md  docker-compose.yaml  init_database.sql  main.py  pyproject.toml
src/: config.py  container.py  start.py
src/bot/handlers/: common.py
src/bot/utils/: text_loader.py
src/lib/: di.py  static_loader.py
src/lib/state_machine/: mixins.py  state_machine.py
src/lib/state_machine/storages/: __init__.py  base.py  pg.py  sqlite.py
